creating basic and rollover html and css files

--- a/project/css/basic_style.css
+++ b/project/css/basic_style.css
@@ -20,14 +20,18 @@ h1{
 /* select all squre in the array*/
 
 .container .squares:nth-child(-n+4){
-    background-image: url("../images/icons/smileyface2.png");
+    background-image: url("../images/smiley1.png");
     color: #fff;
     float: left;
-    width 100px;
+    width :100px;
+    height: 100px; ;
+
     margin: 5px;
     border: 1px solid black;
     border-radius: 25%;
     cursor:pointer;
+  
+    transition: transform .5s ease-in-out;
 }
 /* select all squre path */
 .squares:nth-child(-n+4) p{
@@ -55,4 +59,46 @@ h1{
 
 .squares:nth-child(4) {
     background: #00b200;
+}
+
+.container .squares:nth-child(-n+4):hover{
+    background-image: url("../images/smiley2.png");
+    transform: scale(.5);
+    animation-name: race;
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(2.5, .2, 0.3, 2);
+}   
+.squares:nth-child(1):hover {
+    background: #13b4ff;
+}
+
+.squares:nth-child(2):hover{
+    background: #d861af;
+}
+
+.squares:nth-child(3):hover{
+    background: #81205f;
+}
+
+.squares:nth-child(4):hover {
+    background: #77b800;
+}
+
+.button:hover{
+    background-color: #33fb14;
+    color: #fff;
+    cursor:pointer
+} 
+
+/* Animation Effect*/
+
+@keyframes race{
+    0%, 100%{
+        transform: translateY(Opx);
+        background-image: url("../images/smiley1.png") ;
+    }
+    50%{
+        transform: translateY(330px);
+    }
 }
