--- a/project/css/basic_style.css
+++ b/project/css/basic_style.css
@@ -6,7 +6,7 @@ body{
 h1{
     color: rgpa(8,141,165,1);
     margin-left: 100px;
-    text-shadow: 1px,5px, 4px rgbs(0,0,0,0,6);
+    text-shadow: 1px .5px 4px rgbs(0,0,0,0,6);
 }
 
 .container{
@@ -67,7 +67,7 @@ h1{
     animation-name: race;
     animation-duration: 2.5s;
     animation-iteration-count: infinite;
-    animation-timing-function: cubic-bezier(2.5, .2, 0.3, 2);
+    animation-timing-function: cubic-bezier(2.5, .2, .3, 2);
 }   
 .squares:nth-child(1):hover {
     background: #13b4ff;
