--- a/project1/CSS/animation.css
+++ b/project1/CSS/animation.css
@@ -45,18 +45,18 @@
     box-shadow: 2px 2px 10px rgba(0,0,0,0.7);
 }
 
-.photo-container{
+.Photo-Container{
     text-align: center;
     margin: 15px auto;
     width: 300px;
-    height: 169;
+    height: 169px;
 
 }
 
-.photo-container img{
+.Photo-Container img{
     max-width: 100%;
     width: 300px;
-    height: 169;
+    height: 169px;
 
 }
 
@@ -68,7 +68,7 @@
     bottom: 0;
     left: 0;
     padding-left: 20px;
-    padding-right:20;
+    padding-right:20px;
     justify-content: center;
     align-items: center;
     background: rgba(0,0,0,.5);
@@ -85,7 +85,7 @@
 /* photo Overly Transition */
 
 .photo-overlay{
-    capacity:0;
+    opacity:0;
     transition: opacity .5s;
     border-radius: 10px;
     cursor: pointer;
