--- a/project1/CSS/shared.css
+++ b/project1/CSS/shared.css
@@ -138,7 +138,7 @@ section{
 /* HOME SECTION STYLE */
 
 #home{
-    background: url(../image/planets.jpg) no-repeat 50% 50%;
+    background: url(../images/thumb/planets.png) no-repeat 50% 50%;
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -207,7 +207,7 @@ section{
     border-radius: 8px;
     margin: 0px auto;
     background-color: rgba(100,65,0,.3);
-    box-shadow: -1px -1px 1px 0 rgba(0,0,0,.1), 1px 2px 10px 0 rgba(0,0,0,0.5);
+    box-shadow: -1px -1px 1px 0 rgba(0,0,0,.1), 1px 2px 10px rgba(0,0,0,0.5);
 }
 
 .reservation h2{
@@ -256,7 +256,7 @@ section{
     font-family: 'Raleway', sans-serif;
 }
 
-.reservation input{
+.reservation input[type="text"]{
     font-size: 15px;
     outline: none;
     font-weight: 600;
@@ -328,8 +328,9 @@ section{
 
 /* footer style */
 #footer{
-    background-color: rgba(100,65,0,0,3);
+    background-color: rgba(100,65,0,0.3);
     color:#000;
+    text-shadow:2px 2px 8px 0 (0,0,0,0.4);
     padding: 20px 50px 20px 50px;
     text-align: right;
 
