--- a/Video/Video.Website/Pages/Index.cshtml
+++ b/Video/Video.Website/Pages/Index.cshtml
@@ -8,4 +8,10 @@
     <h1 class="display-4">Video</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+<div id="myContainer">
+    <div id="myAnimation">My animation will go here</div>
+</div>
+<p>
+    <button onclick="myMove()">Click Me</button>
+</p>
 <iframe width="664" height="374" src="https://www.youtube.com/embed/3AtDnEC4zak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
