--- a/Video/Video.Website/wwwroot/css/site.css
+++ b/Video/Video.Website/wwwroot/css/site.css
@@ -74,11 +74,17 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-#animate {
+#myContainer {
+    width: 400px;
+    height: 400px;
+    position: relative;
+    background: yellow;
+}
+
+#myAnimation {
     width: 50px;
     height: 50px;
     position: absolute;
-    background-color: red;
+    background: red;
 }
-
 
